# strength-calc

./: Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  prelude.rs
crates/elements/: Cargo.toml
crates/elements/src/: lib.rs
crates/materials/: Cargo.toml
crates/materials/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
